# G1-TalkModule-OpenAiAPI

./: .env.example  .gitignore  AVVIA.bat  AVVIA.txt  BRANCH_H2_TESTING.md  DEPLOY_ISTRUZIONI.md  GUIDA.md  INSTALLA  INSTALLAZIONE.md  INSTALLA_PORTAUDIO.md  LEGGIMI.txt  README.md  avvia.ps1  avvia_ai_accelerator.sh  avvia_installer.ps1  avvia_installer.sh  avvia_locale.ps1  avvia_tutto.ps1  deploy.ps1  install.sh  main.py  prova_audio_locale.html  pyproject.toml  requirements-camera.txt  requirements-jetson.txt  requirements.txt  run.ps1  run.sh  tunnel.ps1
capacitor-app/: README.md  accept_licenses.ps1  build_apk.ps1  capacitor.config.json  package-lock.json  package.json
config/: audio_devices.json  elenco_testi_soundboard.txt  hand_grasp.json  italian_vocabulary.txt  knowledge.json  knowledge.txt  knowledge_de.json  parla_teaching_gestures.json  pick_maneuver.json  robot_actions.json  robot_actions_de.json  run_sheet.json  soundboard.json  soundboard_de.json  soundboard_lite.json  soundboard_script.json  soundboard_script_de.json  stt_config.json  visitor_profiles.json  web_search_config.json
docs/: ARM_SETUP.md  AUDIO.md  INSTALLAZIONE.md  INSTALLAZIONE_G1_JETSON_COMPLETA.md  JETSON_UNITREE_SDK.md  ROBOT_ACTIONS.md  STT.md
installer/: __init__.py  main.py
mobile-app/: README.md  build_apk.ps1  capacitor.config.json  package-lock.json  package.json
scripts/: LEGGIMI_PACCHETTO_COMPLETO.txt  add_g1_subnet_windows.ps1  analyze_client_html.py  bootstrap_venv_no_sudo.sh  build_campus_robotizzato_deck.py  check_audio_hardware.py  check_client_js.py  check_led.py  (+37 more)
(+97 files in other folders)
